plugins {
    id 'com.android.application'
}

android {
    compileSdk 36

    defaultConfig {
        applicationId "com.tumuyan.ncnn.realsr"
        minSdk 24
        //noinspection ExpiredTargetSdkVersion
        targetSdk 28
        versionCode 48
        versionName '1.11.4'

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }


    buildTypes {
        debug {
            applicationIdSuffix ".debug"
            debuggable true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'

        }


        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    android.applicationVariants.all {
        variant ->
            variant.outputs.all {
                outputFileName = "RealSR-NCNN-Android-GUI-armv8a-${variant.versionName}.apk"
            }
    }

    lint {
        baseline = file("lint-baseline.xml")
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    namespace 'com.tumuyan.ncnn.realsr'
    buildFeatures {
        buildConfig true
    }
}

dependencies {
    // Dependency 'androidx.appcompat:appcompat:1.4.1' requires API level 31
    implementation 'androidx.appcompat:appcompat:1.3.0'
    implementation 'com.google.android.material:material:1.5.0-alpha01'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
}